# HW_13_Web

./: Instruction_go.txt  main.py  pyproject.toml
migration/: env.py
migration/versions/: b15274ec2d16_add_table_users.py  b8a2b73aab25_add_user_role.py  bf46e5e73aea_add_verify.py  c36fa50c8ddd_init.py
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16387  16390  16392  16397  16400  16401  16407  16409  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  3501  3502  (+4 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: todos.py  users.py
src/routes/: auth.py  todos.py  users.py
src/schemas/: todo.py  user.py
src/services/: auth.py  email.py
src/services/templates/: verify_email.html
